# btq-core

./: .cirrus.yml  .gitignore  BLOCK_TIMING_IMPLEMENTATION.md  CITATIONS.md  CONTRIBUTING.md  COPYING  DILITHIUM_INTEGRATION_PHASES.md  DILITHIUM_WALLET_FIXES.md  MINING_POOL_OPTIMIZATION.md  Makefile.am  PHASE6_COMPLETE_SUMMARY.md  README.md  README_P2MR_CLI_E2E.md  SECURITY.md  TESTING_GUIDE.md  UTXO_CONSOLIDATION_OPTIMIZATION.md  WHITEPAPER_INTEGRATION_DESIGN.md  autogen.sh  configure.ac  doc-btq-design.md  libbtqconsensus.pc.in  mainnet_commands.sh  rename.sh  run_p2mr_rpc_e2e.sh  test_dilithium_sendmany.sh  test_dilithium_wallet.sh
.github/: PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  btq.sln  btq_config.h.in  msvc-autogen.py
ci/: lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  btq-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  (+14 more)
doc-btq/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md
doc/man/: Makefile.am  btq-cli.1  btq-qt.1  btq-tx.1  btq-util.1  btq-wallet.1  btqd.1
(+1796 files in other folders)
