dist_man1_MANS=

if BUILD_BTQD
  dist_man1_MANS+=btqd.1
endif

if ENABLE_QT
  dist_man1_MANS+=btq-qt.1
endif

if BUILD_BTQ_CLI
  dist_man1_MANS+=btq-cli.1
endif

if BUILD_BTQ_TX
  dist_man1_MANS+=btq-tx.1
endif

if BUILD_BTQ_UTIL
  dist_man1_MANS+=btq-util.1
endif

if ENABLE_WALLET
if BUILD_BTQ_WALLET
  dist_man1_MANS+=btq-wallet.1
endif
endif
